<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rest_of_ui"
    tools:context=".booklibrary.LibraryActivity"
    android:contentDescription="@string/library_page_content_description">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/library_actionbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/upper_Color"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/_10sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/library"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp"
            android:contentDescription="@string/library"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:id="@+id/no_songs_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        android:text="@string/no_songs_found"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/library_actionbar"
        android:padding="@dimen/_2sdp" />


</RelativeLayout>