<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rest_of_ui"
    tools:context=".ocr_tts.Converter_Activity"
    android:contentDescription="@string/converter_page_content_description">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/converter_action_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/card_view"
        android:gravity="center" />

    <ImageView
        android:layout_width="@dimen/_85sdp"
        android:layout_height="@dimen/_85sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_125sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_220sdp"
        android:gravity="center"
        android:padding="@dimen/_10sdp">

        <androidx.cardview.widget.CardView
            android:id="@+id/sound_lis"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_200sdp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:cardBackgroundColor="@color/upper_Color"
            app:cardCornerRadius="@dimen/_20sdp"
            app:cardElevation="0dp"
            android:contentDescription="@string/text_to_sound">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/sound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:src="@drawable/cloud_sound" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_35sdp"
                    android:fontFamily="@font/cairo"
                    android:gravity="center_horizontal"
                    android:text="@string/text_to_sound"
                    android:textColor="@color/text"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/pdf_lis"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_200sdp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:cardBackgroundColor="@color/upper_Color"
            app:cardCornerRadius="@dimen/_20sdp"
            android:contentDescription="@string/pdf_to_text"
            app:cardElevation="0dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/pdf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:src="@drawable/pdf_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:fontFamily="@font/cairo"
                    android:gravity="center_horizontal"
                    android:text="@string/pdf_to_text"
                    android:textColor="@color/text"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>