<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:contentDescription="@string/About_page_content_description">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/rest_of_ui"
        android:titleTextColor="@color/text_Icon"
        app:titleTextColor="@color/text" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar"
        android:background="@color/rest_of_ui"
        android:orientation="vertical"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:paddingBottom="@dimen/_20sdp">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_160sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:cardBackgroundColor="#94EC255A"
            app:cardCornerRadius="@dimen/_25sdp"
            app:cardElevation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/logo_tit"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:src="@drawable/logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.095"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.111" />

                <TextView
                    android:id="@+id/meta_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/acme"
                    android:text="@string/app_name"
                    android:textColor="@color/text_Icon"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.139"
                    app:layout_constraintStart_toEndOf="@+id/logo_tit"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.089" />

                <TextView
                    android:id="@+id/aut_tit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/text_Icon"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.113"
                    app:layout_constraintStart_toEndOf="@+id/logo_tit"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.278" />

                <ImageView
                    android:id="@+id/ver"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/version_svg"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.134"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/logo_tit"
                    app:layout_constraintVertical_bias="0.215" />

                <TextView
                    android:id="@+id/version_tit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/acme"
                    android:text="@string/version"
                    android:textColor="@color/text_Icon"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.106"
                    app:layout_constraintStart_toEndOf="@+id/logo_tit"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.537" />

                <TextView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/version_n"
                    android:textColor="@color/text_Icon"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.355"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.688" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/acme"
                    android:gravity="center_horizontal"
                    android:text="@string/wish"
                    android:textColor="@color/text_Icon"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold"
                    android:contentDescription="@string/wish"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.911" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:cardBackgroundColor="#94EC255A"
            app:cardCornerRadius="@dimen/_25sdp"
            app:cardElevation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/dev_tit"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:fontFamily="@font/acme"
                    android:text="@string/dev"
                    android:textColor="@color/text_Icon"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.058"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.115" />

                <ImageView
                    android:id="@+id/aut_img"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_26sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:src="@drawable/author_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.133"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dev_tit"
                    app:layout_constraintVertical_bias="0.012" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/acme"
                    android:text="@string/developer"
                    android:textColor="@color/text_Icon"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold"
                    android:contentDescription="@string/developer"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.142"
                    app:layout_constraintStart_toEndOf="@+id/aut_img"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.454" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/acme"
                    android:text="@string/url_Link"
                    android:textColor="@color/text_Icon"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.143"
                    app:layout_constraintStart_toEndOf="@+id/down_tit"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.744" />

                <ImageView
                    android:id="@+id/down_tit"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/download_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.13"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/aut_img"
                    app:layout_constraintVertical_bias="0.345" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            app:cardBackgroundColor="#94EC255A"
            app:cardCornerRadius="@dimen/_25sdp"
            app:cardElevation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:fontFamily="@font/acme"
                    android:text="@string/company"
                    android:textColor="@color/text_Icon"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.058"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.115" />

                <ImageView
                    android:id="@+id/comp_tit"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginStart="32dp"
                    android:src="@drawable/company_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    app:layout_constraintVertical_bias="0.118" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/acme"
                    android:text="@string/about_company"
                    android:textColor="@color/text_Icon"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.148"
                    app:layout_constraintStart_toEndOf="@+id/comp_tit"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.389" />

                <TextView
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/acme"
                    android:text="@string/about_address"
                    android:textColor="@color/text_Icon"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.529"
                    app:layout_constraintStart_toEndOf="@+id/place_tit"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <ImageView
                    android:id="@+id/place_tit"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/map_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.098"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/comp_tit" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>
</RelativeLayout>